<resources>
    <string name="app_name">E-Sangu</string>
    <string name="fa_icon_areachart">&#xf1fe;</string>
    <string name="fa_icon_piechart">&#xf200;</string>
    <string name="fa_icon_linechart">&#xf201;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="hint_name">Name</string>
    <string name="hint_category">Category</string>
    <string name="hint_expenses">Expenses Amount</string>
    <string name="text_sumbit">Submit</string>
    <string name="text_delete">Delete</string>
    <string name="role_hint">Register as</string>
    <string name="login_button_label">Sign In</string>
    <string name="register_button_on_login_layout_label">Don\'t have any Account? Register</string>
    <string name="register_label">Register</string>
    <string name="login_button_on_register_layout_label">Already have an account? Sign In</string>
    <string name="logout_label">Logout</string>
    <string name="edit_label">Edit</string>
    <string name="hint_total_budget">Total Budget</string>

    <string-array name="profile_account">
        <item>Edit Profile</item>
        <item>Edit Passowrd</item>
        <item>Relation</item>
        <item>Language</item>
        <item>Dark Theme</item>
    </string-array>

    <array name="image_account">
        <item>@drawable/ic_edit</item>
        <item>@drawable/ic_password</item>
        <item>@drawable/ic_relation</item>
        <item>@drawable/ic_language</item>
        <item>@drawable/ic_tema</item>
    </array>

    <string-array name="profile_other">
        <item>Privacy Policy</item>
        <item>Terms of Services</item>
        <item>About Developer</item>
        <item>Rate E-Sangu App</item>
    </string-array>

    <array name="image_other">
        <item>@drawable/ic_kebijakan_privasi</item>
        <item>@drawable/ic_ketentuan_layanan</item>
        <item>@drawable/ic_developer</item>
        <item>@drawable/ic_rating</item>
    </array>

</resources>