<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.budgetdetail.BudgetDetailActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/load_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/hint_total_budget">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingVertical="12dp"
        android:text="@string/text_sumbit"
        android:textAllCaps="false" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_semibold"
        android:paddingVertical="12dp"
        android:text="@string/edit_label"
        android:textAllCaps="false" />

<!--    <com.google.android.material.button.MaterialButton-->
<!--        android:id="@+id/delete_button"-->
<!--        style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="32dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:paddingVertical="12dp"-->
<!--        android:text="@string/text_delete"-->
<!--        android:textAllCaps="false" />-->

</LinearLayout>